--- a/spec/fixtures/vcr_cassettes/ForecastService/_get_forecast/_sad_returns_error_message_for_empty_search.yml
+++ b/spec/fixtures/vcr_cassettes/ForecastService/_get_forecast/_sad_returns_error_message_for_empty_search.yml
@@ -19,11 +19,11 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Mon, 05 Aug 2024 16:03:45 GMT
+      - Mon, 05 Aug 2024 16:42:38 GMT
       Content-Type:
       - application/json
-      Transfer-Encoding:
-      - chunked
+      Content-Length:
+      - '59'
       Connection:
       - keep-alive
       Server:
@@ -43,7 +43,7 @@ http_interactions:
       X-Weatherapi-Qpm-Left:
       - '4999961'
       X-Varnish:
-      - '87770943'
+      - '118484110'
       Cdn-Proxyver:
       - '1.04'
       Cdn-Requestpullsuccess:
@@ -51,17 +51,17 @@ http_interactions:
       Cdn-Requestpullcode:
       - '400'
       Cdn-Cachedat:
-      - '08/05/2024 16:03:45'
+      - '08/05/2024 16:42:38'
       Cdn-Edgestorageid:
       - '871'
       Cdn-Status:
       - '400'
       Cdn-Requestid:
-      - 5de6e1dbd62c8b226ae3e6ec8e506230
+      - e9f987a1b2c08ce4b1e4e389a9177e51
       Cdn-Cache:
       - EXPIRED
     body:
       encoding: UTF-8
       string: '{"error":{"code":1003,"message":"Parameter q is missing."}}'
-  recorded_at: Mon, 05 Aug 2024 16:03:45 GMT
+  recorded_at: Mon, 05 Aug 2024 16:42:38 GMT
 recorded_with: VCR 6.2.0
