--- a/spec/fixtures/vcr_cassettes/MapquestService/_get_lat_long/_sad_returns_empty_data_for_a_non_city_search.yml
+++ b/spec/fixtures/vcr_cassettes/MapquestService/_get_lat_long/_sad_returns_empty_data_for_a_non_city_search.yml
@@ -19,24 +19,24 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 05 Aug 2024 16:42:40 GMT
+      - Mon, 05 Aug 2024 17:50:03 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
-      - '800'
+      - '666'
       Connection:
       - keep-alive
       X-Powered-By:
       - MapQuest
       X-Request-Id:
-      - ba82ff80-5349-11ef-a815-bb03c14ab8d2
+      - 24c6e420-5353-11ef-b4bb-01f06dd3829e
       Access-Control-Allow-Origin:
       - "*"
       Etag:
-      - W/"320-hMDW81dwiG/DXKPn0DnaFsesxOM"
+      - W/"29a-dC5g4V+Bz0ADStd/zUcju5cU1mo"
     body:
       encoding: UTF-8
       string: '{"info":{"statuscode":0,"copyright":{"text":"© 2024 MapQuest, Inc.","imageUrl":"http://api.mqcdn.com/res/mqlogo.gif","imageAltText":"©
-        2024 MapQuest, Inc."},"messages":[]},"options":{"maxResults":-1,"ignoreLatLngInput":false},"results":[{"providedLocation":{"location":"hsdfg"},"locations":[{"street":"","adminArea6":"","adminArea6Type":"Neighborhood","adminArea5":"","adminArea5Type":"City","adminArea4":"","adminArea4Type":"County","adminArea3":"","adminArea3Type":"State","adminArea1":"US","adminArea1Type":"Country","postalCode":"","geocodeQualityCode":"A1XAX","geocodeQuality":"COUNTRY","dragPoint":false,"sideOfStreet":"N","linkId":"0","unknownInput":"","type":"s","latLng":{"lat":38.89037,"lng":-77.03196},"displayLatLng":{"lat":38.89037,"lng":-77.03196},"mapUrl":"","source":"FALLBACK"}]}]}'
-  recorded_at: Mon, 05 Aug 2024 16:42:40 GMT
+        2024 MapQuest, Inc."},"messages":[]},"options":{"maxResults":-1,"ignoreLatLngInput":false},"results":[{"providedLocation":{"location":"hsdfg"},"locations":[{"street":"","adminArea6":"","adminArea5":"","adminArea4":"","adminArea3":"","adminArea1":"US","postalCode":"","geocodeQualityCode":"A1XAX","geocodeQuality":"COUNTRY","dragPoint":false,"sideOfStreet":"N","linkId":"0","unknownInput":"","type":"s","latLng":{"lat":38.89037,"lng":-77.03196},"displayLatLng":{"lat":38.89037,"lng":-77.03196},"mapUrl":"","source":"FALLBACK"}]}]}'
+  recorded_at: Mon, 05 Aug 2024 17:50:03 GMT
 recorded_with: VCR 6.2.0
