--- a/spec/fixtures/vcr_cassettes/ForecastService/_get_forecast/_sad_returns_error_message_for_weird_coords_search.yml
+++ b/spec/fixtures/vcr_cassettes/ForecastService/_get_forecast/_sad_returns_error_message_for_weird_coords_search.yml
@@ -19,15 +19,15 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Tue, 06 Aug 2024 02:50:39 GMT
+      - Tue, 06 Aug 2024 13:54:16 GMT
       Content-Type:
       - application/json
-      Content-Length:
-      - '63'
+      Transfer-Encoding:
+      - chunked
       Connection:
       - keep-alive
       Server:
-      - BunnyCDN-IL1-1067
+      - BunnyCDN-IL1-871
       Cdn-Pullzone:
       - '93447'
       Cdn-Uid:
@@ -41,9 +41,9 @@ http_interactions:
       Via:
       - 1.1 varnish (Varnish/6.0)
       X-Weatherapi-Qpm-Left:
-      - '4999945'
+      - '4999941'
       X-Varnish:
-      - '133645232'
+      - '103863923'
       Cdn-Proxyver:
       - '1.04'
       Cdn-Requestpullsuccess:
@@ -51,17 +51,17 @@ http_interactions:
       Cdn-Requestpullcode:
       - '400'
       Cdn-Cachedat:
-      - '08/06/2024 02:50:39'
+      - '08/06/2024 13:54:16'
       Cdn-Edgestorageid:
       - '1069'
       Cdn-Status:
       - '400'
       Cdn-Requestid:
-      - 36464975e1aa3a441ef40b081f774b81
+      - 73bd75bc60c42cd56fba019ca52f7362
       Cdn-Cache:
       - EXPIRED
     body:
       encoding: UTF-8
       string: '{"error":{"code":1006,"message":"No matching location found."}}'
-  recorded_at: Tue, 06 Aug 2024 02:50:39 GMT
+  recorded_at: Tue, 06 Aug 2024 13:54:16 GMT
 recorded_with: VCR 6.2.0
