--- a/spec/fixtures/vcr_cassettes/ForecastService/_get_forecast/_sad_returns_error_message_for_weird_coords_search.yml
+++ b/spec/fixtures/vcr_cassettes/ForecastService/_get_forecast/_sad_returns_error_message_for_weird_coords_search.yml
@@ -19,15 +19,15 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Tue, 06 Aug 2024 13:54:16 GMT
+      - Tue, 06 Aug 2024 17:03:59 GMT
       Content-Type:
       - application/json
-      Transfer-Encoding:
-      - chunked
+      Content-Length:
+      - '63'
       Connection:
       - keep-alive
       Server:
-      - BunnyCDN-IL1-871
+      - BunnyCDN-IL1-940
       Cdn-Pullzone:
       - '93447'
       Cdn-Uid:
@@ -35,15 +35,15 @@ http_interactions:
       Cdn-Requestcountrycode:
       - US
       Age:
-      - '0'
+      - '70'
       Cache-Control:
       - public, max-age=5
       Via:
       - 1.1 varnish (Varnish/6.0)
       X-Weatherapi-Qpm-Left:
-      - '4999941'
+      - '4999930'
       X-Varnish:
-      - '103863923'
+      - 105479863 95250966
       Cdn-Proxyver:
       - '1.04'
       Cdn-Requestpullsuccess:
@@ -51,17 +51,17 @@ http_interactions:
       Cdn-Requestpullcode:
       - '400'
       Cdn-Cachedat:
-      - '08/06/2024 13:54:16'
+      - '08/06/2024 17:03:59'
       Cdn-Edgestorageid:
       - '1069'
       Cdn-Status:
       - '400'
       Cdn-Requestid:
-      - 73bd75bc60c42cd56fba019ca52f7362
+      - b363b68622c3bffe3ee25f7f97f973f1
       Cdn-Cache:
       - EXPIRED
     body:
       encoding: UTF-8
       string: '{"error":{"code":1006,"message":"No matching location found."}}'
-  recorded_at: Tue, 06 Aug 2024 13:54:16 GMT
+  recorded_at: Tue, 06 Aug 2024 17:03:59 GMT
 recorded_with: VCR 6.2.0
