--- a/spec/fixtures/vcr_cassettes/ForecastService/_get_forecast/_sad_returns_error_message_for_weird_coords_search.yml
+++ b/spec/fixtures/vcr_cassettes/ForecastService/_get_forecast/_sad_returns_error_message_for_weird_coords_search.yml
@@ -19,15 +19,15 @@ http_interactions:
       message: Bad Request
     headers:
       Date:
-      - Tue, 06 Aug 2024 17:03:59 GMT
+      - Tue, 06 Aug 2024 20:51:22 GMT
       Content-Type:
       - application/json
-      Content-Length:
-      - '63'
+      Transfer-Encoding:
+      - chunked
       Connection:
       - keep-alive
       Server:
-      - BunnyCDN-IL1-940
+      - BunnyCDN-IL1-894
       Cdn-Pullzone:
       - '93447'
       Cdn-Uid:
@@ -35,15 +35,15 @@ http_interactions:
       Cdn-Requestcountrycode:
       - US
       Age:
-      - '70'
+      - '0'
       Cache-Control:
       - public, max-age=5
       Via:
       - 1.1 varnish (Varnish/6.0)
       X-Weatherapi-Qpm-Left:
-      - '4999930'
+      - '4999910'
       X-Varnish:
-      - 105479863 95250966
+      - '110418069'
       Cdn-Proxyver:
       - '1.04'
       Cdn-Requestpullsuccess:
@@ -51,17 +51,17 @@ http_interactions:
       Cdn-Requestpullcode:
       - '400'
       Cdn-Cachedat:
-      - '08/06/2024 17:03:59'
+      - '08/06/2024 20:51:22'
       Cdn-Edgestorageid:
       - '1069'
       Cdn-Status:
       - '400'
       Cdn-Requestid:
-      - b363b68622c3bffe3ee25f7f97f973f1
+      - c3617deff5c9e8c33fb5920c2c3587f2
       Cdn-Cache:
       - EXPIRED
     body:
       encoding: UTF-8
       string: '{"error":{"code":1006,"message":"No matching location found."}}'
-  recorded_at: Tue, 06 Aug 2024 17:03:59 GMT
+  recorded_at: Tue, 06 Aug 2024 20:51:22 GMT
 recorded_with: VCR 6.2.0
