--- a/spec/fixtures/vcr_cassettes/Forecast_API/GET_/api/v1/forecast_location_denver_co/responds_with_the_serialized_Forecast_json_for_a_given_location.yml
+++ b/spec/fixtures/vcr_cassettes/Forecast_API/GET_/api/v1/forecast_location_denver_co/responds_with_the_serialized_Forecast_json_for_a_given_location.yml
@@ -19,7 +19,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Tue, 06 Aug 2024 17:03:50 GMT
+      - Tue, 06 Aug 2024 20:51:13 GMT
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -29,7 +29,7 @@ http_interactions:
       X-Powered-By:
       - MapQuest
       X-Request-Id:
-      - da2774c0-5415-11ef-9bc8-e3041ddacbee
+      - 9e2501c0-5435-11ef-924c-658f38139183
       Access-Control-Allow-Origin:
       - "*"
       Etag:
@@ -38,7 +38,7 @@ http_interactions:
       encoding: UTF-8
       string: '{"info":{"statuscode":0,"copyright":{"text":"© 2024 MapQuest, Inc.","imageUrl":"http://api.mqcdn.com/res/mqlogo.gif","imageAltText":"©
         2024 MapQuest, Inc."},"messages":[]},"options":{"maxResults":-1,"ignoreLatLngInput":false},"results":[{"providedLocation":{"location":"denver,co"},"locations":[{"street":"","adminArea6":"","adminArea6Type":"Neighborhood","adminArea5":"Denver","adminArea5Type":"City","adminArea4":"Denver","adminArea4Type":"County","adminArea3":"CO","adminArea3Type":"State","adminArea1":"US","adminArea1Type":"Country","postalCode":"","geocodeQualityCode":"A5XAX","geocodeQuality":"CITY","dragPoint":false,"sideOfStreet":"N","linkId":"0","unknownInput":"","type":"s","latLng":{"lat":39.74001,"lng":-104.99202},"displayLatLng":{"lat":39.74001,"lng":-104.99202},"mapUrl":""}]}]}'
-  recorded_at: Tue, 06 Aug 2024 17:03:50 GMT
+  recorded_at: Tue, 06 Aug 2024 20:51:13 GMT
 - request:
     method: get
     uri: http://api.weatherapi.com/v1/forecast.json?days=5&key=a11e58ffc9ff43f1a8b162806240208&q=39.74001,-104.99202
@@ -58,7 +58,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Tue, 06 Aug 2024 17:03:50 GMT
+      - Tue, 06 Aug 2024 20:51:13 GMT
       Content-Type:
       - application/json
       Transfer-Encoding:
@@ -68,7 +68,7 @@ http_interactions:
       Vary:
       - Accept-Encoding
       Server:
-      - BunnyCDN-IL1-940
+      - BunnyCDN-IL1-1029
       Cdn-Pullzone:
       - '93447'
       Cdn-Uid:
@@ -82,9 +82,9 @@ http_interactions:
       Via:
       - 1.1 varnish (Varnish/6.0)
       X-Weatherapi-Qpm-Left:
-      - '4999930'
+      - '4999910'
       X-Varnish:
-      - '120753835'
+      - '93129960'
       Cdn-Proxyver:
       - '1.04'
       Cdn-Requestpullsuccess:
@@ -92,21 +92,21 @@ http_interactions:
       Cdn-Requestpullcode:
       - '200'
       Cdn-Cachedat:
-      - '08/06/2024 17:02:30'
+      - '08/06/2024 20:51:03'
       Cdn-Edgestorageid:
       - '718'
       Cdn-Status:
       - '200'
       Cdn-Requestid:
-      - d7b33f4f670a9c0eda32faffc837bb27
+      - 5b7aff2f18c2e0bfee7c966efb956061
       Cdn-Cache:
       - HIT
     body:
       encoding: UTF-8
       string: '{"location":{"name":"Denver","region":"Colorado","country":"United
-        States of America","lat":39.74,"lon":-104.99,"tz_id":"America/Denver","localtime_epoch":1722963658,"localtime":"2024-08-06
-        11:00"},"current":{"last_updated_epoch":1722963600,"last_updated":"2024-08-06
-        11:00","temp_c":29.1,"temp_f":84.5,"is_day":1,"condition":{"text":"Sunny","icon":"//cdn.weatherapi.com/weather/64x64/day/113.png","code":1000},"wind_mph":2.2,"wind_kph":3.6,"wind_degree":312,"wind_dir":"NW","pressure_mb":1016.0,"pressure_in":30.01,"precip_mm":0.0,"precip_in":0.0,"humidity":31,"cloud":11,"feelslike_c":28.2,"feelslike_f":82.8,"windchill_c":29.1,"windchill_f":84.5,"heatindex_c":28.2,"heatindex_f":82.8,"dewpoint_c":10.1,"dewpoint_f":50.1,"vis_km":10.0,"vis_miles":6.0,"uv":7.0,"gust_mph":6.7,"gust_kph":10.8},"forecast":{"forecastday":[{"date":"2024-08-06","date_epoch":1722902400,"day":{"maxtemp_c":35.4,"maxtemp_f":95.8,"mintemp_c":21.0,"mintemp_f":69.8,"avgtemp_c":27.1,"avgtemp_f":80.8,"maxwind_mph":17.7,"maxwind_kph":28.4,"totalprecip_mm":0.17,"totalprecip_in":0.01,"totalsnow_cm":0.0,"avgvis_km":10.0,"avgvis_miles":6.0,"avghumidity":38,"daily_will_it_rain":1,"daily_chance_of_rain":85,"daily_will_it_snow":0,"daily_chance_of_snow":0,"condition":{"text":"Patchy
+        States of America","lat":39.74,"lon":-104.99,"tz_id":"America/Denver","localtime_epoch":1722977370,"localtime":"2024-08-06
+        14:49"},"current":{"last_updated_epoch":1722977100,"last_updated":"2024-08-06
+        14:45","temp_c":34.1,"temp_f":93.5,"is_day":1,"condition":{"text":"Sunny","icon":"//cdn.weatherapi.com/weather/64x64/day/113.png","code":1000},"wind_mph":4.0,"wind_kph":6.5,"wind_degree":69,"wind_dir":"ENE","pressure_mb":1012.0,"pressure_in":29.89,"precip_mm":0.0,"precip_in":0.0,"humidity":17,"cloud":12,"feelslike_c":32.5,"feelslike_f":90.4,"windchill_c":34.1,"windchill_f":93.5,"heatindex_c":32.5,"heatindex_f":90.4,"dewpoint_c":6.2,"dewpoint_f":43.2,"vis_km":10.0,"vis_miles":6.0,"uv":8.0,"gust_mph":4.6,"gust_kph":7.5},"forecast":{"forecastday":[{"date":"2024-08-06","date_epoch":1722902400,"day":{"maxtemp_c":35.4,"maxtemp_f":95.8,"mintemp_c":21.0,"mintemp_f":69.8,"avgtemp_c":27.1,"avgtemp_f":80.8,"maxwind_mph":17.7,"maxwind_kph":28.4,"totalprecip_mm":0.17,"totalprecip_in":0.01,"totalsnow_cm":0.0,"avgvis_km":10.0,"avgvis_miles":6.0,"avghumidity":38,"daily_will_it_rain":1,"daily_chance_of_rain":85,"daily_will_it_snow":0,"daily_chance_of_snow":0,"condition":{"text":"Patchy
         rain nearby","icon":"//cdn.weatherapi.com/weather/64x64/day/176.png","code":1063},"uv":10.0},"astro":{"sunrise":"06:04
         AM","sunset":"08:07 PM","moonrise":"08:06 AM","moonset":"09:29 PM","moon_phase":"Waxing
         Crescent","moon_illumination":2,"is_moon_up":1,"is_sun_up":1},"hour":[{"time_epoch":1722924000,"time":"2024-08-06
@@ -122,7 +122,7 @@ http_interactions:
         08:00","temp_c":23.7,"temp_f":74.6,"is_day":1,"condition":{"text":"Sunny","icon":"//cdn.weatherapi.com/weather/64x64/day/113.png","code":1000},"wind_mph":2.2,"wind_kph":3.6,"wind_degree":287,"wind_dir":"WNW","pressure_mb":1019.0,"pressure_in":30.08,"precip_mm":0.0,"precip_in":0.0,"snow_cm":0.0,"humidity":47,"cloud":7,"feelslike_c":25.0,"feelslike_f":77.0,"windchill_c":23.7,"windchill_f":74.6,"heatindex_c":25.0,"heatindex_f":77.0,"dewpoint_c":11.4,"dewpoint_f":52.4,"will_it_rain":0,"chance_of_rain":0,"will_it_snow":0,"chance_of_snow":0,"vis_km":10.0,"vis_miles":6.0,"gust_mph":2.6,"gust_kph":4.1,"uv":6.0},{"time_epoch":1722956400,"time":"2024-08-06
         09:00","temp_c":25.3,"temp_f":77.6,"is_day":1,"condition":{"text":"Sunny","icon":"//cdn.weatherapi.com/weather/64x64/day/113.png","code":1000},"wind_mph":1.8,"wind_kph":2.9,"wind_degree":292,"wind_dir":"WNW","pressure_mb":1018.0,"pressure_in":30.06,"precip_mm":0.0,"precip_in":0.0,"snow_cm":0.0,"humidity":42,"cloud":7,"feelslike_c":25.8,"feelslike_f":78.4,"windchill_c":25.3,"windchill_f":77.6,"heatindex_c":25.8,"heatindex_f":78.4,"dewpoint_c":11.0,"dewpoint_f":51.9,"will_it_rain":0,"chance_of_rain":0,"will_it_snow":0,"chance_of_snow":0,"vis_km":10.0,"vis_miles":6.0,"gust_mph":2.1,"gust_kph":3.3,"uv":6.0},{"time_epoch":1722960000,"time":"2024-08-06
         10:00","temp_c":27.2,"temp_f":80.9,"is_day":1,"condition":{"text":"Sunny","icon":"//cdn.weatherapi.com/weather/64x64/day/113.png","code":1000},"wind_mph":2.0,"wind_kph":3.2,"wind_degree":320,"wind_dir":"NW","pressure_mb":1017.0,"pressure_in":30.04,"precip_mm":0.0,"precip_in":0.0,"snow_cm":0.0,"humidity":36,"cloud":8,"feelslike_c":26.9,"feelslike_f":80.4,"windchill_c":27.2,"windchill_f":80.9,"heatindex_c":26.9,"heatindex_f":80.4,"dewpoint_c":10.7,"dewpoint_f":51.2,"will_it_rain":0,"chance_of_rain":0,"will_it_snow":0,"chance_of_snow":0,"vis_km":10.0,"vis_miles":6.0,"gust_mph":2.3,"gust_kph":3.7,"uv":7.0},{"time_epoch":1722963600,"time":"2024-08-06
-        11:00","temp_c":29.1,"temp_f":84.5,"is_day":1,"condition":{"text":"Sunny","icon":"//cdn.weatherapi.com/weather/64x64/day/113.png","code":1000},"wind_mph":2.2,"wind_kph":3.6,"wind_degree":312,"wind_dir":"NW","pressure_mb":1016.0,"pressure_in":30.01,"precip_mm":0.0,"precip_in":0.0,"snow_cm":0.0,"humidity":31,"cloud":11,"feelslike_c":28.2,"feelslike_f":82.8,"windchill_c":29.1,"windchill_f":84.5,"heatindex_c":28.2,"heatindex_f":82.8,"dewpoint_c":10.1,"dewpoint_f":50.1,"will_it_rain":0,"chance_of_rain":0,"will_it_snow":0,"chance_of_snow":0,"vis_km":10.0,"vis_miles":6.0,"gust_mph":6.7,"gust_kph":10.8,"uv":7.0},{"time_epoch":1722967200,"time":"2024-08-06
+        11:00","temp_c":29.1,"temp_f":84.5,"is_day":1,"condition":{"text":"Sunny","icon":"//cdn.weatherapi.com/weather/64x64/day/113.png","code":1000},"wind_mph":1.1,"wind_kph":1.8,"wind_degree":312,"wind_dir":"NW","pressure_mb":1016.0,"pressure_in":30.01,"precip_mm":0.0,"precip_in":0.0,"snow_cm":0.0,"humidity":31,"cloud":11,"feelslike_c":28.2,"feelslike_f":82.8,"windchill_c":29.1,"windchill_f":84.5,"heatindex_c":28.2,"heatindex_f":82.8,"dewpoint_c":10.1,"dewpoint_f":50.1,"will_it_rain":0,"chance_of_rain":0,"will_it_snow":0,"chance_of_snow":0,"vis_km":10.0,"vis_miles":6.0,"gust_mph":1.3,"gust_kph":2.1,"uv":7.0},{"time_epoch":1722967200,"time":"2024-08-06
         12:00","temp_c":31.0,"temp_f":87.8,"is_day":1,"condition":{"text":"Sunny","icon":"//cdn.weatherapi.com/weather/64x64/day/113.png","code":1000},"wind_mph":1.6,"wind_kph":2.5,"wind_degree":49,"wind_dir":"NE","pressure_mb":1015.0,"pressure_in":29.97,"precip_mm":0.0,"precip_in":0.0,"snow_cm":0.0,"humidity":26,"cloud":16,"feelslike_c":29.6,"feelslike_f":85.2,"windchill_c":31.0,"windchill_f":87.8,"heatindex_c":29.6,"heatindex_f":85.2,"dewpoint_c":9.3,"dewpoint_f":48.7,"will_it_rain":0,"chance_of_rain":0,"will_it_snow":0,"chance_of_snow":0,"vis_km":10.0,"vis_miles":6.0,"gust_mph":1.8,"gust_kph":2.9,"uv":8.0},{"time_epoch":1722970800,"time":"2024-08-06
         13:00","temp_c":32.9,"temp_f":91.3,"is_day":1,"condition":{"text":"Sunny","icon":"//cdn.weatherapi.com/weather/64x64/day/113.png","code":1000},"wind_mph":4.5,"wind_kph":7.2,"wind_degree":72,"wind_dir":"ENE","pressure_mb":1013.0,"pressure_in":29.93,"precip_mm":0.0,"precip_in":0.0,"snow_cm":0.0,"humidity":22,"cloud":13,"feelslike_c":31.3,"feelslike_f":88.3,"windchill_c":32.9,"windchill_f":91.3,"heatindex_c":31.3,"heatindex_f":88.3,"dewpoint_c":8.1,"dewpoint_f":46.5,"will_it_rain":0,"chance_of_rain":0,"will_it_snow":0,"chance_of_snow":0,"vis_km":10.0,"vis_miles":6.0,"gust_mph":5.1,"gust_kph":8.3,"uv":8.0},{"time_epoch":1722974400,"time":"2024-08-06
         14:00","temp_c":34.1,"temp_f":93.5,"is_day":1,"condition":{"text":"Sunny","icon":"//cdn.weatherapi.com/weather/64x64/day/113.png","code":1000},"wind_mph":4.0,"wind_kph":6.5,"wind_degree":69,"wind_dir":"ENE","pressure_mb":1012.0,"pressure_in":29.89,"precip_mm":0.0,"precip_in":0.0,"snow_cm":0.0,"humidity":17,"cloud":12,"feelslike_c":32.5,"feelslike_f":90.4,"windchill_c":34.1,"windchill_f":93.5,"heatindex_c":32.5,"heatindex_f":90.4,"dewpoint_c":6.2,"dewpoint_f":43.2,"will_it_rain":0,"chance_of_rain":0,"will_it_snow":0,"chance_of_snow":0,"vis_km":10.0,"vis_miles":6.0,"gust_mph":4.6,"gust_kph":7.5,"uv":8.0},{"time_epoch":1722978000,"time":"2024-08-06
@@ -298,5 +298,5 @@ http_interactions:
         Cloudy ","icon":"//cdn.weatherapi.com/weather/64x64/night/116.png","code":1003},"wind_mph":1.1,"wind_kph":1.8,"wind_degree":296,"wind_dir":"WNW","pressure_mb":1014.0,"pressure_in":29.95,"precip_mm":0.0,"precip_in":0.0,"snow_cm":0.0,"humidity":55,"cloud":29,"feelslike_c":24.7,"feelslike_f":76.5,"windchill_c":22.8,"windchill_f":73.0,"heatindex_c":24.7,"heatindex_f":76.5,"dewpoint_c":12.6,"dewpoint_f":54.7,"will_it_rain":0,"chance_of_rain":0,"will_it_snow":0,"chance_of_snow":0,"vis_km":10.0,"vis_miles":6.0,"gust_mph":1.7,"gust_kph":2.7,"uv":0},{"time_epoch":1723352400,"time":"2024-08-10
         23:00","temp_c":22.6,"temp_f":72.7,"is_day":0,"condition":{"text":"Partly
         Cloudy ","icon":"//cdn.weatherapi.com/weather/64x64/night/116.png","code":1003},"wind_mph":5.4,"wind_kph":8.6,"wind_degree":49,"wind_dir":"NE","pressure_mb":1014.0,"pressure_in":29.93,"precip_mm":0.0,"precip_in":0.0,"snow_cm":0.0,"humidity":55,"cloud":45,"feelslike_c":24.7,"feelslike_f":76.4,"windchill_c":22.6,"windchill_f":72.7,"heatindex_c":24.7,"heatindex_f":76.4,"dewpoint_c":12.9,"dewpoint_f":55.2,"will_it_rain":0,"chance_of_rain":0,"will_it_snow":0,"chance_of_snow":0,"vis_km":10.0,"vis_miles":6.0,"gust_mph":7.5,"gust_kph":12.1,"uv":0}]}]}}'
-  recorded_at: Tue, 06 Aug 2024 17:03:50 GMT
+  recorded_at: Tue, 06 Aug 2024 20:51:13 GMT
 recorded_with: VCR 6.2.0
